policies/poststart-httpget-host-initcontainers.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: check-poststart-httpget-host-initcontainers
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE","UPDATE"]
        resources: ["pods"]
  validations:
    - expression: >
        !has(object.spec.initContainers) ||
        object.spec.initContainers.all(ic,
          !has(ic.lifecycle) ||
          !has(ic.lifecycle.postStart) ||
          !has(ic.lifecycle.postStart.httpGet) ||
          !has(ic.lifecycle.postStart.httpGet.host) ||
          ic.lifecycle.postStart.httpGet.host == ""
        )
      message: >
        spec.initContainers[*].lifecycle.postStart.httpGet.host must be undefined or empty ("").
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-poststart-httpget-host-initcontainers-namespace-optout-warn
spec:
  policyName: check-poststart-httpget-host-initcontainers
  validationActions:
    - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: validating-admission-policies.kolteq.com/warn
          operator: In
          values: ["baseline","restricted"]
        - key: validating-admission-policies.kolteq.com/poststart-httpget-host-initcontainers
          operator: NotIn
          values: ["false"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-poststart-httpget-host-initcontainers-namespace-optin-warn
spec:
  policyName: check-poststart-httpget-host-initcontainers
  validationActions:
    - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: poststart-httpget-host-initcontainers.validating-admission-policies.kolteq.com/warn
          operator: In
          values: ["true"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-poststart-httpget-host-initcontainers-namespace-optout-audit
spec:
  policyName: check-poststart-httpget-host-initcontainers
  validationActions:
    - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: validating-admission-policies.kolteq.com/audit
          operator: In
          values: ["baseline","restricted"]
        - key: validating-admission-policies.kolteq.com/poststart-httpget-host-initcontainers
          operator: NotIn
          values: ["false"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-poststart-httpget-host-initcontainers-namespace-optin-audit
spec:
  policyName: check-poststart-httpget-host-initcontainers
  validationActions:
    - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: poststart-httpget-host-initcontainers.validating-admission-policies.kolteq.com/audit
          operator: In
          values: ["true"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-poststart-httpget-host-initcontainers-namespace-optout-deny
spec:
  policyName: check-poststart-httpget-host-initcontainers
  validationActions:
    - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: validating-admission-policies.kolteq.com/enforce
          operator: In
          values: ["baseline","restricted"]
        - key: validating-admission-policies.kolteq.com/poststart-httpget-host-initcontainers
          operator: NotIn
          values: ["false"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-poststart-httpget-host-initcontainers-namespace-optin-deny
spec:
  policyName: check-poststart-httpget-host-initcontainers
  validationActions:
    - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: poststart-httpget-host-initcontainers.validating-admission-policies.kolteq.com/enforce
          operator: In
          values: ["true"]
